k8s/run-bcnode/bcnode.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcnode-deployment
  labels:
    app: bcnode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bcnode
  template:
    # template for bcnode pods
    metadata:
      labels:
        app: bcnode
    spec:
      volumes:
      - name: bcnode-db
        emptyDir: {}
      containers:
      - name: bcnode
        image: lgray/bcnode:latest
        volumeMounts:
        - mountPath: /bc/_data
          name: bcnode-db
        ports:
        - name: rpc
          protocol: TCP
          containerPort: 3000
        - name: bccomms
          protocol: TCP
          containerPort: 16060
        - name: bcbootstrap
          protocol: TCP
          containerPort: 16061
        args: ['start', '--rovers', '--rpc', '--ws', '--ui', '--node', '--scookie', '${BC_SCOOKIE}', '--relay-mode']
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - bcnode
            topologyKey: "kubernetes.io/hostname"
