k8s/run-bcnode/bcnode-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bcnode-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
      - host: bcnode.ingress
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: bcnode-svc
                  port:
                    number: 16060
                  port:
                    number: 16061
